<resources>
    <string name="app_name">Quizz</string>
<!--    <string name="header_q"><![CDATA[<b><font color=#D359A1>Q</font></b>]]></string>-->
    <string name="header">Quizz</string>
    <string name="intro">New here? Please create your account before you move on.</string>
    <string name="registration">Registration</string>
    <string name="register">Register me!</string>
    <string name="login">Login</string>>
    <string name="already_exist">Already have account?</string>>
    <string name="forgot_password">Can\'t remember password?</string>
    <string name="doesnt_exist">Don\'t have account?</string>
    <string name="hello">Hello!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome">We are glad you are back, give your info  and let’s play!</string>
    <string name="who_are_you">Who are you?</string>
    <string name="pick_username">Pick something cool! Be original.</string>
    <string name="choose_username">Choose your username</string>
    <string name="change_password_title">Don\'t forget!</string>
    <string name="change_password_intro">Next time pick something you cant forget.</string>
    <string name="change_password_description">Can\'t remember my password</string>
    <string name="change_password_new_password">I want new password!</string>
    <string name="fragment_main_title">Let\'s play!</string>
    <string name="fragment_main_intro">Not sure how the game works? Click this for more info about the rules.</string>
    <string name="fragment_main_ready">Ready?</string>
    <string name="fragment_main_rules">Rules</string>
    <string name="fragment_main_play">Play</string>
    <string name="fragment_leaderboard_title">Leaderboard</string>
    <string name="fragment_profile_intro">Let people see your pretty face!</string>
    <string name="fragment_profile_description">Change your password</string>
    <string name="fragment_profile_change_password">Change my password!</string>
    <string name="fragment_profile_delete_account">Delete your precious account.</string>
    <string name="fragment_dialog_delete_account_title">Oh no!</string>
    <string name="fragment_dialog_delete_account_description">Are you sure you want to <font fgcolor="#FFFF3B30">delete</font> your account?</string>
    <string name="fragment_game_next">Next</string>
    <string name="fragment_dialog_rules_title">Rules</string>
    <string name="fragment_dialog_rule_1">Answers a question in 30 seconds!</string>
    <string name="fragment_dialog_rule_2">Every correct answer brings you point!</string>
    <string name="fragment_dialog_rule_3">One wrong answer and the game is over!</string>
    <string name="fragment_game_over_title">Game over!</string>
    <string name="fragment_game_over_description">Hooraay! Your final score is</string>
    <string name="fragment_game_over_play_again">Play again</string>
    <string name="fragment_game_over_leaderboard">Leaderboard</string>
</resources>