<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/header_color">

        <ImageView
            android:id="@+id/header_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_begin="24dp"
        android:orientation="vertical">
    </androidx.constraintlayout.widget.Guideline>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintGuide_end="24dp"
        android:orientation="vertical">
    </androidx.constraintlayout.widget.Guideline>

    <TextView
        android:id="@+id/hello_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        style="@style/TextAppearance.Title"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/header_layout"/>

    <TextView
        android:id="@+id/intro_TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/hello_TextView" />

    <TextView
        android:id="@+id/login_TextView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/intro_TextView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/myOutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/login_TextView"

        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:startIconDrawable ="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/white"
        android:hint="Username"
        android:textColorHint ="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/header_color"
        android:enabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:startIconDrawable ="@drawable/password"
        app:startIconTint="@color/white"
        app:endIconTint="@color/white"
        app:endIconMode="password_toggle"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:hint="Password"
        android:textColorHint ="@color/white"
        app:hintTextColor="@color/white"
        app:boxStrokeWidth="0dp"
        app:boxBackgroundColor="@color/header_color"
        android:enabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/white"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/log_reg_button"
        android:text="@string/login"
        style="@style/logRegButton"
        />

    <TextView
        android:id="@+id/forgot_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/login_button" />

    <TextView
        android:id="@+id/doesnt_exist_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doesnt_exist"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/switch_to_register_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@id/doesnt_exist_tv"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/switch_to_log_reg_button"
        android:text="@string/register"
        style="@style/switchLogRegButton"
        />
</androidx.constraintlayout.widget.ConstraintLayout>