<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintGuide_begin="24dp"
                android:orientation="vertical">
            </androidx.constraintlayout.widget.Guideline>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintGuide_end="24dp"
                android:orientation="vertical">
            </androidx.constraintlayout.widget.Guideline>

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_game_over_title"
                style="@style/TextAppearance.Title"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintRight_toLeftOf="@id/rightGuideline"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_image_iv"
                app:layout_constraintTop_toBottomOf="@id/title_tv"
                app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
                app:layout_constraintRight_toRightOf="@id/rightGuideline"
                android:layout_marginTop="50dp"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:src="@drawable/profile_image"/>

            <TextView
                android:id="@+id/description_tv"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/fragment_game_over_description"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="10dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintRight_toRightOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/profile_image_iv" />

            <TextView
                android:id="@+id/score_tv"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                style="@style/score"
                android:gravity="center"
                android:text="64"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintRight_toRightOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/description_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play_again_button"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintRight_toLeftOf="@id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@id/score_tv"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/log_reg_button"
                android:text="@string/fragment_game_over_play_again"
                style="@style/logRegButton"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/leaderboard_button"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintTop_toBottomOf="@id/play_again_button"
                app:layout_constraintLeft_toRightOf="@id/leftGuideline"
                app:layout_constraintRight_toLeftOf="@id/rightGuideline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/switch_to_log_reg_button"
                style="@style/switchLogRegButton"
                android:text="@string/fragment_game_over_leaderboard"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>